# eikon

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC-PHASE1.md  hostkey.pub  package.json  pyproject.toml  tsconfig.json  tsconfig.web.json  vercel.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: auto-delist.yml  catalog.yml  ci.yml  registry.yml
avatars/ares/: manifest.json
avatars/daylight/: manifest.json
catalog/: ares.eikon  default.eikon  index.json  mono.eikon  nous.eikon
docs/: MANIFEST.md  PLATFORM.md  SKILL.md  SPEC.md  SUPABASE_REGISTRY.md  VIDEO_HANDOFF.md  eikon.md
docs/plans/: 2026-06-10-001-spec-eikon-contract-simplification-plan.md
eikons/: gen_starter.py  index.json
eikons/ares/: ares.eikon  (+2 more)
preview/: README.md  package.json
scripts/: auto-delist.ts  lib.ts  mk_eikon.ts  mk_index.ts  mk_manifest.ts  registry-pr-check.ts  supabase-import-github.ts  supabase-smoke.ts  to_ascii.py  vercel-ignore.sh
src/: browser.ts  catalog.ts  cli.tsx  edge.ts  index.ts  install.ts  lifecycle.ts  migrate.ts  pack.ts  publish.ts  registry.ts  source.ts  url-policy.ts
supabase/: config.toml  seed.sql
tests/: _probe_ssh.ts  artifact-drift.test.ts  auto-delist.test.ts  browse.test.ts  browser.test.tsx  catalog.test.ts  cli.test.ts  contract.test.ts  install.test.ts  launch-catalog.test.ts  migrate.test.ts  pack.test.ts  preload.ts  publish.test.ts  registry-generation.test.ts  registry-pr-check.test.ts  test_config.py  test_prompt.py  test_states.py  u1-resolver-trust.test.ts  web-site.test.tsx  web.test.ts
(+92 files in other folders)
