[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eikon"
version = "0.1.0"
description = "Video-state generation for AI avatars using Veo 3.1 Fast"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "google-genai>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
eikon = "eikon.cli:cli"

[tool.ruff]
target-version = "py311"
line-length = 100
